[gd_scene load_steps=27 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-idle-00.png" type="Texture" id=2]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-idle-01.png" type="Texture" id=3]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-die-00.png" type="Texture" id=4]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-die-01.png" type="Texture" id=5]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-die-02.png" type="Texture" id=6]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-die-03.png" type="Texture" id=7]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-die-04.png" type="Texture" id=8]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-die-05.png" type="Texture" id=9]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-die-06.png" type="Texture" id=10]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-attack2-01.png" type="Texture" id=11]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-attack2-02.png" type="Texture" id=12]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-attack2-03.png" type="Texture" id=13]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-attack2-04.png" type="Texture" id=14]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-jump-03.png" type="Texture" id=15]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-cast-01.png" type="Texture" id=16]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-run-00.png" type="Texture" id=17]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-run-01.png" type="Texture" id=18]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-run-02.png" type="Texture" id=19]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-run-03.png" type="Texture" id=20]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-run-04.png" type="Texture" id=21]
[ext_resource path="res://texturas/player/Adventurer-1.5/Individual Sprites/adventurer-run-05.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 2.5
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "hurt",
"speed": 2.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 7.5
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 17.3578
height = 27.3386

[sub_resource type="CapsuleShape2D" id=3]
radius = 18.8472
height = 28.5076

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.8666, 26.2903 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 332.006, 376.737 )
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 9.53674e-06, 3.0912 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "attack"

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( -2.93481, 9.20837 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_top = 0
limit_bottom = 600

[node name="dano" type="Area2D" parent="."]
position = Vector2( 0.0846863, 1.3176 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="dano"]
position = Vector2( -3.05862, 8.11426 )
shape = SubResource( 3 )

[node name="ataque_direita" type="Area2D" parent="."]
position = Vector2( 30.9175, 9.27524 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="ataque_direita"]
position = Vector2( 0.387489, -0.293336 )
shape = SubResource( 4 )

[node name="ataque_esquerda" type="Area2D" parent="."]
position = Vector2( -37.8145, 8.79959 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="ataque_esquerda"]
position = Vector2( 0.149666, -0.0554819 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="dano" to="." method="_on_dano_body_entered"]
[connection signal="body_entered" from="ataque_direita" to="." method="_on_ataque_direita_body_entered"]
[connection signal="body_entered" from="ataque_esquerda" to="." method="_on_ataque_esquerda_body_entered"]
